tests/valid/definite/UnionType_Valid_3.whiley
define int|real as intreal

//void f(intreal x):
//    if(x in int):
//        print "Got int"
//    else:
//        print "Got real"

void System::main([string] args):
    f(1)
    f(1.23)
