tests/invalid/For_Invalid_11.whiley
method f(int[] items):
    for i in 1..|items|:
        skip